jellyfin/resources/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: jellyfin
  namespace: jellyfin
  labels:
    app.kubernetes.io/name: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`jellyfin.monroe.gg`) ||  Host(`jellyfin.monroeshindelar.com`)
      priority: 10
      services:
        - kind: Service
          name: jellyfin
          namespace: jellyfin
          port: 8096
  tls:
    certResolver: porkbun
